# clogger

./: .clang-format  .gitignore  CMakeLists.txt  Makefile.am  README.md  autogen.sh  configure.ac
.buzzy/: links.yaml  package.yaml
.github/workflows/: ci.yml
docs/: CMakeLists.txt  api.rst  conf.py  index.rst
include/: CMakeLists.txt  clogger.h
include/clogger/: api.h  error.h  fields.h  formatter.h  handlers.h  logging.h  stash.h
include/clogger/helpers/: fields.h
scripts/: distcheck  install
src/: CMakeLists.txt  clogger.pc.in
src/clog-test/: clog-test.c
src/libclogger/: fields.c  filter.c  foo.c  formatter.c  levels.c  logging.c  null.c  stack.c  stash.c  stream.c
tests/: CMakeLists.txt  ccram  helpers.h  test-benchmark.c  test-formatter.c  test-logging.c  test-stash.c
